<resources>
    <string name="app_name">idea3D</string>
    <string name="title_activity_calcu">calcuActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="see_more">Ver artículo</string>
    <string name="country">es</string>
    <string name="printer">impresora</string>
    <string name="favs">Tus favoritos</string>
    <string name="works">Tus trabajos</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="mandatory_fill">Este campo es obligatorio</string>
    <string name="Horas">Horas</string>
    <string name="kWh">$ kWh</string>
    <string name="kg">x 1Kg</string>
    <string name="Peso">Peso</string>
    <string name="Material">Material</string>
    <string name="CE">Costo Energético</string>
    <string name="CM">Costo Materiales</string>
    <string name="CT">Costo Total</string>
    <string name="energy">Energía</string>
    <string name="supplies">Insumos</string>
    <string name="good_night">Buenas noches</string>
    <string name="good_evening">Buenas tardes</string>
    <string name="good_morning">Buen día</string>
    <string name="download">Lo quiero</string>
    <string name="guide_title">Guía visual para la resolución de problemas FDM</string>
    <string name="search_hint">Busca la solución a tu problema</string>
    <string name="delete">Eliminar</string>
    <string name="no_resuts">No se encontraron resultados para tu búsqueda, intenta con otras palabras. Recuerda que el motor de búsqueda de Thingiverse sólo funciona en inglés.</string>
    <string-array name="filamentos">
        <item>PLA</item>
        <item>ABS</item>
        <item>HIPS</item>
        <item>Nylon</item>
        <item>Flexible</item>
    </string-array>
    <string name="abs_descripcion">¿Alguna vez armaste algo con piezas de Lego? Entonces tuviste ABS (acrilonitrilo butadieno estireno) en tus manos. Es el plástico más común en impresión 3D y eso es por su característica de ser un termoplástico flexible y altamente resistente a golpes. Hoy en día se utiliza, por ejemplo, en la carrocería de automotores, engranajes de electrodomésticos o las carcasas de los celulares.</string>
    <string name="pla_descripcion">El PLA es re copado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_list_screen">ListScreenActivity</string>
    <string name="maker_zone_title">Zona \nMaker</string>
    <string name="maker_zone_finance">Finanzas</string>
    <string name="maker_zone_quick_actions">Acciones rápidas</string>
    <string name="maker_zone_works">Trabajos</string>
    <string name="maker_zone_status_1">Pendiente</string>
    <string name="maker_zone_status_2">Listo p/ empezar</string>
    <string name="maker_zone_status_3">En progreso</string>
    <string name="maker_zone_status_4">Imp. Terminada</string>
    <string name="maker_zone_status_5">Postprocesado</string>
    <string name="maker_zone_status_6">Listo p/ entregar</string>
    <string name="maker_zone_status_7">Entregado</string>
    <string name="maker_zone_status_8">Cobrado</string>
    <string name="maker_zone_status_9">Pausado</string>
    <string-array name="status">

        <item>Pendiente</item>
        <item>Listo p/ empezar</item>
        <item>En progreso</item>
        <item>Imp. Terminada</item>
        <item>Postprocesado</item>
        <item>Listo p/ entregar</item>
        <item>Entregado</item>
        <item>Cobrado</item>
        <item>Pausado</item>

    </string-array>
    <string-array name="period">
        <item>total</item>
        <item>este mes</item>
        <item>este año</item>
    </string-array>
    <string name="month_01">Enero</string>
    <string name="month_02">Febrero</string>
    <string name="month_03">Marzo</string>
    <string name="month_04">Abril</string>
    <string name="month_05">Mayo</string>
    <string name="month_06">Junio</string>
    <string name="month_07">Julio</string>
    <string name="month_08">Agosto</string>
    <string name="month_09">Septiembre</string>
    <string name="month_10">Octubre</string>
    <string name="month_11">Noviembre</string>
    <string name="month_12">Diciembre</string>
    <string name="donate_title">Apoya a Idea 3D</string>
    <string name="donate_button">Contribuir</string>
    <string name="donate_tv">Hola, soy Néstor, creador de la app Idea 3D. Quiero agradecer a todos los makers que han utilizado nuestra plataforma y que nos han proporcionado comentarios valiosos. Como saben, Idea 3D es una aplicación gratuita que hemos desarrollado con el objetivo de ayudar a la comunidad de makers y usuarios de impresoras 3D.\n

Sin embargo, el desarrollo y mantenimiento de esta aplicación requiere de esfuerzo y recursos continuos. Por eso, hoy les pido su apoyo financiero para ayudarnos a continuar mejorando Idea 3D y ofrecer una mejor experiencia para todos los usuarios. Cualquier contribución que hagan será invertida directamente en el desarrollo y mantenimiento de nuestra plataforma.\n

Quiero destacar que Idea 3D seguirá siendo una aplicación gratuita. No estamos buscando beneficios económicos con esta campaña de financiación, sino simplemente recursos para mejorar nuestra plataforma y hacerla aún más útil para todos los usuarios. Estamos comprometidos en ofrecer una herramienta que ayude a la comunidad de makers y estamos agradecidos por cualquier contribución que puedan hacer para ayudarnos a lograr este objetivo.\n

Gracias por su apoyo y por ser parte de la comunidad de makers. Juntos podemos hacer realidad una plataforma mejor y más útil para todos.
    </string>
    <string name="no_extrusion_start_title">No extruye en el inicio de la impresión</string>
    <string name="no_extrusion_start_description">No sale nada de plástico durante el inicio de la impresión.</string>
    <string name="no_extrusion_start_cause1">No sale plástico del nozzle</string>
    <string name="no_extrusion_start_cause2">El extrusor está tapado</string>
    <string name="no_extrusion_start_cause3">Nozzle "raya" la cama</string>
    <string name="first_layer_not_adhering_title">La primer capa no se adhiere a la base</string>
    <string name="first_layer_not_adhering_description">En el comienzo de la impresión, la primera capa no se pega a la cama caliente</string>
    <string name="first_layer_not_adhering_cause1">Cama caliente y nozzle</string>
    <string name="first_layer_not_adhering_cause2">Velocidad primera capa</string>
    <string name="first_layer_not_adhering_cause3">Temperatura</string>
    <string name="little_plastic_nozzle_title">Sale poco plástico del nozzle</string>
    <string name="little_plastic_nozzle_description">Falta plástico para unir correctamente los perimetros y el relleno</string>
    <string name="little_plastic_nozzle_cause1">Diámetro de filamento</string>
    <string name="little_plastic_nozzle_cause2">Multiplicador</string>
    <string name="lot_plastic_nozzle_title">Sale mucho plástico del nozzle</string>
    <string name="lot_plastic_nozzle_description">Exceso de plástico en las capas superiores</string>
    <string name="lot_plastic_nozzle_cause1">Parámetro Multiplicador</string>
    <string name="holes_upper_layers_title">Agujeros en las capas superiores</string>
    <string name="holes_upper_layers_description">Huecos en la cara superior de las piezas</string>
    <string name="holes_upper_layers_cause1">Capas superiores</string>
    <string name="holes_upper_layers_cause2">Relleno bajo</string>
    <string name="holes_upper_layers_cause3">Poca extrusión</string>
    <string name="threads_outside_piece_title">Hilos en el exterior de la pieza</string>
    <string name="threads_outside_piece_description">Restos de hilos que desprende el cabezal y se pegan a la pieza</string>
    <string name="threads_outside_piece_cause1">Retracción</string>
    <string name="threads_outside_piece_cause2">Temperatura alta</string>
    <string name="threads_outside_piece_cause3">Grandes desplazamientos</string>
    <string name="deformation_excess_temperature_title">Deformación por exceso de temperatura</string>
    <string name="deformation_excess_temperature_description">Imperfecciones en los detalles por sobrecalentamiento</string>
    <string name="deformation_excess_temperature_cause1">Refrigeración de capa</string>
    <string name="deformation_excess_temperature_cause2">Temperatura alta</string>
    <string name="deformation_excess_temperature_cause3">Alta velocidad</string>
    <string name="layer_displacement_title">Desplazamiento de capas</string>
    <string name="layer_displacement_description">Se nota una mala calibración de los ejes desalineados</string>
    <string name="layer_displacement_cause1">Hotend</string>
    <string name="layer_displacement_cause2">Correas</string>
    <string name="layer_displacement_cause3">Electrónica</string>
    <string name="filament_jammed_title">Filamento Atascado</string>
    <string name="filament_jammed_description">Durante la impresión el plástico no avanza y el filamento se nota mordido</string>
    <string name="filament_jammed_cause1">Hotend</string>
    <string name="filament_jammed_cause2">Velocidad</string>
    <string name="filament_jammed_cause3">Temperatura</string>
    <string name="extruder_jammed_title">Extrusor atascado</string>
    <string name="extruder_jammed_description">No sale pláctico de la boquilla</string>
    <string name="extruder_jammed_cause1">Temperatura incorrecta </string>
    <string name="extruder_jammed_cause2">Filamento defectuoso </string>
    <string name="extruder_jammed_cause3">Desarmar hotend</string>
    <string name="stops_extruding_plastic_title">Deja de extruir plástico </string>
    <string name="stops_extruding_plastic_description">Se interrumpe la extrusión en medio de la impresión</string>
    <string name="stops_extruding_plastic_cause1">Tubo de teflón dañado</string>
    <string name="stops_extruding_plastic_cause2">Filamento mordido</string>
    <string name="stops_extruding_plastic_cause3">Motor sobrecalentado</string>
    <string name="deficient_filling_title">Relleno deficiente</string>
    <string name="deficient_filling_description">El relleno es muy fino y sus paredes no se unen correctamente</string>
    <string name="deficient_filling_cause1">Velocidad de relleno</string>
    <string name="deficient_filling_cause2">Cambiar de relleno</string>
    <string name="deficient_filling_cause3">Flujo de material</string>
    <string name="plastic_stuck_piece_title">Plástico pegado a la pieza</string>
    <string name="plastic_stuck_piece_description">Se forman "grumos" de plástico y se pegan a la pieza</string>
    <string name="plastic_stuck_piece_cause1">Retracción</string>
    <string name="plastic_stuck_piece_cause2">Temperatura</string>
    <string name="holes_outer_layers_title">Huecos en las capas exteriores</string>
    <string name="holes_outer_layers_description">Se forman agujeros en las capas superiores y en los laterales</string>
    <string name="holes_outer_layers_cause1">Relación perímetro/relleno</string>
    <string name="holes_outer_layers_cause2">Velocidad de impresión</string>
    <string name="holes_outer_layers_cause3">Capas "Top"</string>
    <string name="warping_title">Warping</string>
    <string name="menu_01">STL</string>
    <string name="menu_02">Trabajos</string>
    <string name="menu_03">Inicio</string>
    <string name="menu_04">Calculadora</string>
    <string name="menu_05">Guía</string>
</resources>