<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.home.BottomSheetNewsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:footerDividersEnabled="true" >

            <View
                android:id="@+id/divider8"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:background="?attr/colorSecondary"
                android:visibility="visible" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:src="@drawable/arrow_left_fit"
                    android:background="@null"
                    app:elevation="0dp"
                    android:layout_gravity="center_vertical"
                    app:fabSize="mini"
                    app:tint="?attr/colorSecondary"
                    />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/ModalTitles"
                    android:text="@string/donate_title" />

                <Space
                    android:layout_width="48dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_gray"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:src="@drawable/logoidea"
                    app:civ_border_color="@color/teal_idea"
                    app:civ_border_width="4dp" />
                    -->


                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/at_surt_light"
                    android:padding="16dp"
                    android:text="@string/donate_tv"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seemore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_button"
                android:textSize="16dp"
                app:iconGravity="end"
                app:icon="@drawable/ic_like_out"
                app:iconTint="?attr/colorSecondary"
                android:fontFamily="@font/at_surt_regular"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd = "16dp"
                android:layout_marginBottom = "16dp"
                android:textColor="?attr/colorSecondary"
                app:backgroundTint="?attr/colorSecondaryVariant"/>
        </LinearLayout>


    </FrameLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>